# muxtop

./: .editorconfig  .gitignore  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  Justfile  LICENSE-APACHE  LICENSE-MIT  README.md  deny.toml
.cargo/: config.toml
.github/workflows/: ci.yml  publish-manual.yml  release.yml
crates/muxtop-core/: Cargo.toml
crates/muxtop-core/benches/: kube_bench.rs  network_bench.rs  process_bench.rs  snapshot_bench.rs
crates/muxtop-core/src/: actions.rs  cluster_engine.rs  collector.rs  container_engine.rs  containers.rs  docker_engine.rs  error.rs  kube.rs  kube_engine.rs  lib.rs  network.rs  process.rs  system.rs
crates/muxtop-core/tests/: integration.rs
crates/muxtop-proto/: Cargo.toml
crates/muxtop-proto/benches/: proto_bench.rs
crates/muxtop-proto/src/: error.rs  frame.rs  lib.rs  remote.rs  tls.rs  wire.rs
crates/muxtop-proto/tests/: integration.rs
crates/muxtop-server/: Cargo.toml
crates/muxtop-server/src/: client.rs  error.rs  main.rs  rate_limit.rs  server.rs  tls.rs
crates/muxtop-server/tests/: integration.rs
crates/muxtop-tui/: Cargo.toml
crates/muxtop-tui/benches/: app_bench.rs
crates/muxtop-tui/examples/: alloc_profile.rs
crates/muxtop-tui/src/: app.rs  error.rs  event.rs  lib.rs  terminal.rs
crates/muxtop-tui/src/ui/: confirm.rs  containers.rs  general.rs  kube.rs  mod.rs  network.rs  palette.rs  processes.rs  sanitize.rs  theme.rs
scripts/: bench-thomas.sh  install.sh
src/: main.rs
tests/: cli_integration.rs
