[workspace]
members = ["crates/muxtop-core", "crates/muxtop-tui", "crates/muxtop-proto", "crates/muxtop-server"]
resolver = "3"

[profile.release]
lto = "fat"
codegen-units = 1
strip = "symbols"
panic = "abort"

[workspace.package]
edition = "2024"
version = "0.3.1"
authors = ["Lucas Schimmel"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/lanexadev/muxtop"
description = "A modern, multiplexed system monitor for the terminal"
rust-version = "1.88"

[workspace.dependencies]
# Async runtime
tokio = { version = "1", features = ["rt-multi-thread", "macros", "sync", "signal", "time", "net", "io-util"] }

# System information
sysinfo = "0.34"

# TUI
ratatui = "0.30"
crossterm = "0.29"

# Fuzzy matching
nucleo = "0.5"

# CLI
clap = { version = "4", features = ["derive", "env"] }

# Error handling
thiserror = "2"
anyhow = "1"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["fmt", "env-filter"] }
tracing-appender = "0.2"

# System
libc = "0.2"

# Async utilities
tokio-util = { version = "0.7", features = ["rt"] }

# Utilities
dirs = "6"

# Benchmarking
criterion = { version = "0.5", features = ["html_reports"] }

# Serialization
serde = { version = "1", features = ["derive"] }
bincode = "2"

# Async trait (dyn-safe async fn in trait — see ADR-01 in forge/24)
async-trait = "0.1"

# Docker/Podman API client (v0.3 Containers, see ADR-01 in forge/25)
bollard = "0.20"
futures = "0.3"

# Kubernetes API client (v0.4 Kube tab, see ADR-04 in forge/32) — features
# trimmed to keep binary footprint controlled (see plan T-810/T-820).
# k8s-openapi forbids library crates from enabling its v1_* features; only
# the leaf binaries (muxtop, muxtop-server) and the muxtop-core dev-deps
# enable `v1_31`. The library lines below intentionally carry no features.
kube = { version = "0.99", default-features = false, features = ["client", "rustls-tls", "runtime"] }
k8s-openapi = { version = "0.24" }

# TLS
tokio-rustls = "0.26"
rustls-pki-types = "1"
rcgen = "0.14"
ring = "0.17"

# Internal crates
muxtop-core = { path = "crates/muxtop-core", version = "0.3.1" }
muxtop-tui = { path = "crates/muxtop-tui", version = "0.3.1" }
muxtop-proto = { path = "crates/muxtop-proto", version = "0.3.1" }

[package]
name = "muxtop"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description.workspace = true
rust-version.workspace = true
default-run = "muxtop"

[[bin]]
name = "muxtop"
path = "src/main.rs"

[package.metadata.deb]
maintainer = "Lucas Schimmel"
copyright = "2026 Lucas Schimmel"
depends = "$auto"
section = "utils"
priority = "optional"
assets = [
    ["target/release/muxtop", "usr/bin/", "755"],
]
extended-description = "A modern, multiplexed system monitor for the terminal. Features real-time CPU, memory, disk, and network monitoring with a TUI interface, process tree view, and fuzzy search."

[dependencies]
muxtop-core = { workspace = true }
muxtop-tui = { workspace = true }
muxtop-proto = { workspace = true }
clap = { workspace = true }
anyhow = { workspace = true }
tokio = { workspace = true }
tokio-util = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
tracing-appender = { workspace = true }
dirs = { workspace = true }
tokio-rustls = { workspace = true }
rustls-pki-types = { workspace = true }
# k8s-openapi v1_31 feature is enabled here (binary leaf) so muxtop-core's
# typed Pod/Node/Deployment imports resolve. See workspace dep.
k8s-openapi = { workspace = true, features = ["v1_31"] }
