[package]
name = "muxtop-core"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "Core data collection engine for muxtop"
rust-version.workspace = true

[dependencies]
sysinfo = { workspace = true }
tokio = { workspace = true }
tokio-util = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
libc = { workspace = true }
serde = { workspace = true }
bincode = { workspace = true }
async-trait = { workspace = true }
bollard = { workspace = true }
futures = { workspace = true }
dirs = { workspace = true }
kube = { workspace = true }
k8s-openapi = { workspace = true }
http = { workspace = true }
serde_json = { workspace = true }

[dev-dependencies]
criterion = { workspace = true }
tempfile = "3"
# k8s-openapi v1_31 feature is enabled here so unit/integration tests have
# the typed API objects available; the library itself (above) declares no
# version feature per k8s-openapi's library guideline.
k8s-openapi = { workspace = true, features = ["v1_31"] }

[[bench]]
name = "process_bench"
harness = false

[[bench]]
name = "snapshot_bench"
harness = false

[[bench]]
name = "network_bench"
harness = false
