[package]
name = "muxtop-proto"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "Wire protocol and serialization for muxtop"
rust-version.workspace = true

[dependencies]
muxtop-core = { workspace = true }
serde = { workspace = true }
bincode = { workspace = true }
tokio = { workspace = true }
tokio-util = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
tokio-rustls = { workspace = true }
rustls-pki-types = { workspace = true }

[dev-dependencies]
criterion = { workspace = true }
tokio = { workspace = true, features = ["rt-multi-thread", "macros", "net", "io-util"] }
rcgen = { workspace = true }
tempfile = "3"
# k8s-openapi v1_31 needed by integration tests that round-trip KubeSnapshot
# (transitively pulls in the typed Pod/Node/Deployment types). Per the
# k8s-openapi guideline, libraries enable v1_* only in dev-dependencies.
k8s-openapi = { workspace = true, features = ["v1_31"] }

[[bench]]
name = "proto_bench"
harness = false
