[package]
name = "muxtop-tui"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "Terminal UI for muxtop"
rust-version.workspace = true

[dependencies]
muxtop-core = { workspace = true }
ratatui = { workspace = true }
crossterm = { workspace = true }
nucleo = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }

[dev-dependencies]
criterion = { workspace = true }
dhat = "0.3"

[[bench]]
name = "app_bench"
harness = false

[[example]]
name = "alloc_profile"
path = "examples/alloc_profile.rs"
