[package]
name = "muxtop-tui"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "Terminal UI for muxtop"
rust-version.workspace = true

[dependencies]
muxtop-core = { workspace = true }
ratatui = { workspace = true }
crossterm = { workspace = true }
nucleo = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
tokio-util = { workspace = true }
tracing = { workspace = true }

[dev-dependencies]
criterion = { workspace = true }
dhat = "0.3"
# k8s-openapi v1_31 needed by tests that touch muxtop_core::kube types
# (muxtop-core links against k8s-openapi without features per the
# library guideline; binary tests resolve via dev-deps).
k8s-openapi = { workspace = true, features = ["v1_31"] }

[[bench]]
name = "app_bench"
harness = false

[[example]]
name = "alloc_profile"
path = "examples/alloc_profile.rs"
